--- a/.github/workflows/documation.yaml
+++ b/.github/workflows/documation.yaml
@@ -11,6 +11,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme sphinxcontrib-plantuml sphinx_needs
+      - name: Run consistency check
+        run: |
+          python validate.py -i /docs/src/
       - name: Sphinx build
         run: |
           sphinx-build docs _build
