--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -3,7 +3,7 @@ on: [pull_request, workflow_dispatch]
 permissions:
   contents: write
 jobs:
-  docs:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
