--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -3,7 +3,19 @@ on: [pull_request, workflow_dispatch]
 permissions:
   contents: write
 jobs:
-  docs:
+  doctor-rst:
+    name: DOCtor-RST
+    runs-on: ubuntu-latest
+    steps:
+        - name: "Checkout code"
+          uses: actions/checkout@v2
+        - name: DOCtor-RST
+          uses: docker://oskarstark/doctor-rst
+          with:
+            args: --short --error-format=github
+          env:
+            DOCS_DIR: 'docs/'
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
