--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -4,17 +4,15 @@ permissions:
   contents: write
 jobs:
   doctor-rst:
-    name: DOCtor-RST
     runs-on: ubuntu-latest
     steps:
-        - name: "Checkout code"
-          uses: actions/checkout@v2
+        - uses: actions/checkout@v2
         - name: DOCtor-RST
           uses: docker://oskarstark/doctor-rst
           with:
             args: --short --error-format=github
           env:
-            DOCS_DIR: 'docs/'
+            DOCS_DIR: '../../docs/'
   validate:
     runs-on: ubuntu-latest
     steps:
