--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -1,7 +1,5 @@
 name: Validate
-on: [pull_request, workflow_dispatch]
-permissions:
-  contents: write
+on: [push, pull_request, workflow_dispatch]
 jobs:
   validate:
     runs-on: ubuntu-latest
