--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,10 +7,8 @@ on:
 permissions:
   contents: write
 jobs:
-   validate:
-     uses: ./.github/workflows/validate.yaml
    deploy:
-    needs: [validate]
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
