--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          pip install actions-toolkit
+          pip install actions-toolkit xmltodict
           pip install -r requirements.txt
       - name: Build XML
         run: |
