--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -12,7 +12,7 @@ jobs:
           pip install -r requirements.txt
       - name: Build XML
         run: |
-          sphinx-build docs _xml_build -b xml      
+          sphinx-build docs _xml_build -b xml
       - name: Run consistency check
         run: |
-          python validate.py -i src -xml _xml_build
+          python validate.py -i docs/src -xml _xml_build
