--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -1,7 +1,10 @@
 name: Validate
-on: [push, workflow_call]
+on: [push, workflow_dispatch]
 jobs:
+  doctorst:
+    uses: ./.github/workflows/lintrst.yaml
   validate:
+    needs: ['doctorst']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
