--- a/.github/workflows/lintrst.yaml
+++ b/.github/workflows/lintrst.yaml
@@ -14,3 +14,5 @@ jobs:
               uses: docker://oskarstark/doctor-rst
               with:
                   args: --short --error-format=github
+              env:
+                  DOCS_DIR: 'docs/'
